--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>test</title>
   </head>
   <body>
+    <h1>Hi HADI my dear friend:)</h1>
     <script src="/app.js"></script>
   </body>
 </html>
